@@ -1,3 +1,8 @@
+2019-01-29  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* color_picker/color_picker.C: Fix bug in resetting the current
+	color shown if the popup is closed, in some circumstances.
+
 2019-01-26  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* editor_impl.C (editorObj::implObj::process_keypress): Backspace
